--- a/dicee.html
+++ b/dicee.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-    <script src="index.js"></script>
-  </head>
-  <body>
 
-    <div class="container">
-      <h1>Refresh Me</h1>
+<head>
+  <meta charset="utf-8">
+  <title>Dicee</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+  <script src="index.js" defer></script>
+</head>
 
-      <div class="dice">
-        <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
-      </div>
+<body>
 
-      <div class="dice">
-        <p>Player 2</p>
-        <img class="img2" src="">
-      </div>
+  <div class="container">
+    <h1>Refresh Me</h1>
 
+    <div class="dice">
+      <p>Player 1</p>
+      <img class="img1" src="images/dice6.png">
     </div>
 
+    <div class="dice">
+      <p>Player 2</p>
+      <img class="img2" src="images/dice6.png">
+    </div>
+    <button>Play 🥇</button>
+  </div>
 
-  </body>
 
-  <footer>
-    www 🎲 App Brewery 🎲 com
-  </footer>
+</body>
+
+<footer>
+  www 🎲 App Brewery 🎲 com
+</footer>
+
 </html>
